--- a/pages/16248.html
+++ b/pages/16248.html
@@ -311,6 +311,211 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="group_theory">Group Theory</h4>
+
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a></strong></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/group+object">group object</a>, <a class="existingWikiWord" href="/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category">group object in an (∞,1)-category</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/abelian+group">abelian group</a>, <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/group+action">group action</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-action">∞-action</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/progroup">progroup</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/homogeneous+space">homogeneous space</a></li>
+</ul>
+
+<h3 id="classical_groups">Classical groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/general+linear+group">general linear group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/unitary+group">unitary group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/special+unitary+group">special unitary group</a>. <a class="existingWikiWord" href="/nlab/show/projective+unitary+group">projective unitary group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symplectic+group">symplectic group</a></p>
+</li>
+</ul>
+
+<h3 id="finite_groups">Finite groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>, <a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classification+of+finite+simple+groups">classification of finite simple groups</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/sporadic+finite+simple+groups">sporadic finite simple groups</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Monster+group">Monster group</a>, <a class="existingWikiWord" href="/nlab/show/Mathieu+group">Mathieu group</a></li>
+</ul>
+</li>
+</ul>
+
+<h3 id="group_schemes">Group schemes</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/algebraic+group">algebraic group</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/abelian+variety">abelian variety</a></li>
+</ul>
+
+<h3 id="topological_groups">Topological groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+group">topological group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+topological+group">compact topological group</a>, <a class="existingWikiWord" href="/nlab/show/locally+compact+topological+group">locally compact topological group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/maximal+compact+subgroup">maximal compact subgroup</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+group">string group</a></p>
+</li>
+</ul>
+
+<h3 id="lie_groups">Lie groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lie+group">Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+Lie+group">compact Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kac-Moody+group">Kac-Moody group</a></p>
+</li>
+</ul>
+
+<h3 id="superlie_groups">Super-Lie groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/super+Lie+group">super Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/super+Euclidean+group">super Euclidean group</a></p>
+</li>
+</ul>
+
+<h3 id="higher_groups">Higher groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/crossed+module">crossed module</a>, <a class="existingWikiWord" href="/nlab/show/strict+2-group">strict 2-group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/n-group">n-group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/simplicial+group">simplicial group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/crossed+complex">crossed complex</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/k-tuply+groupal+n-groupoid">k-tuply groupal n-groupoid</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/circle+n-group">circle n-group</a>, <a class="existingWikiWord" href="/nlab/show/string+2-group">string 2-group</a>, <a class="existingWikiWord" href="/nlab/show/fivebrane+Lie+6-group">fivebrane Lie 6-group</a></p>
+</li>
+</ul>
+
+<h3 id="cohomology_and_extensions">Cohomology and Extensions</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+extension">group extension</a>,</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+extension">∞-group extension</a>, <a class="existingWikiWord" href="/nlab/show/Ext-group">Ext-group</a></p>
+</li>
+</ul>
+
+<h3 id="related_concepts">Related concepts</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/quantum+group">quantum group</a></li>
+</ul>
+<div>
+<p>
+  <a href="/nlab/edit/group+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div></div>
+</div>
+</div>
+
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
@@ -357,7 +562,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class="newWikiWord">120-cell<a href="/nlab/new/120-cell">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/120-cell">120-cell</a></p>
 </li>
 </ul>
 
@@ -398,14 +603,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  7, 2018 at 02:59:17.
+  Last revised on December  7, 2018 at 04:44:35.
   See the <a href="https://ncatlab.org/nlab/history/Platonic solid" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Platonic+solid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Platonic+solid/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Platonic+solid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Platonic+solid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Platonic+solid" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Platonic+solid/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Platonic+solid" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Platonic+solid" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Platonic solid/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
