--- a/pages/19982.html
+++ b/pages/19982.html
@@ -311,10 +311,220 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="group_theory">Group Theory</h4>
+
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a></strong></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/group+object">group object</a>, <a class="existingWikiWord" href="/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category">group object in an (∞,1)-category</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/abelian+group">abelian group</a>, <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/group+action">group action</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-action">∞-action</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/representation">representation</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/progroup">progroup</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/homogeneous+space">homogeneous space</a></li>
+</ul>
+
+<h3 id="classical_groups">Classical groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/general+linear+group">general linear group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/unitary+group">unitary group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/special+unitary+group">special unitary group</a>. <a class="existingWikiWord" href="/nlab/show/projective+unitary+group">projective unitary group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symplectic+group">symplectic group</a></p>
+</li>
+</ul>
+
+<h3 id="finite_groups">Finite groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>, <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>, <a class="existingWikiWord" href="/nlab/show/braid+group">braid group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classification+of+finite+simple+groups">classification of finite simple groups</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/sporadic+finite+simple+groups">sporadic finite simple groups</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Monster+group">Monster group</a>, <a class="existingWikiWord" href="/nlab/show/Mathieu+group">Mathieu group</a></li>
+</ul>
+</li>
+</ul>
+
+<h3 id="group_schemes">Group schemes</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/algebraic+group">algebraic group</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/abelian+variety">abelian variety</a></li>
+</ul>
+
+<h3 id="topological_groups">Topological groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+group">topological group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+topological+group">compact topological group</a>, <a class="existingWikiWord" href="/nlab/show/locally+compact+topological+group">locally compact topological group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/maximal+compact+subgroup">maximal compact subgroup</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+group">string group</a></p>
+</li>
+</ul>
+
+<h3 id="lie_groups">Lie groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lie+group">Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+Lie+group">compact Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kac-Moody+group">Kac-Moody group</a></p>
+</li>
+</ul>
+
+<h3 id="superlie_groups">Super-Lie groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/super+Lie+group">super Lie group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/super+Euclidean+group">super Euclidean group</a></p>
+</li>
+</ul>
+
+<h3 id="higher_groups">Higher groups</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/crossed+module">crossed module</a>, <a class="existingWikiWord" href="/nlab/show/strict+2-group">strict 2-group</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/n-group">n-group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/simplicial+group">simplicial group</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/crossed+complex">crossed complex</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/k-tuply+groupal+n-groupoid">k-tuply groupal n-groupoid</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/circle+n-group">circle n-group</a>, <a class="existingWikiWord" href="/nlab/show/string+2-group">string 2-group</a>, <a class="existingWikiWord" href="/nlab/show/fivebrane+Lie+6-group">fivebrane Lie 6-group</a></p>
+</li>
+</ul>
+
+<h3 id="cohomology_and_extensions">Cohomology and Extensions</h3>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+extension">group extension</a>,</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+extension">∞-group extension</a>, <a class="existingWikiWord" href="/nlab/show/Ext-group">Ext-group</a></p>
+</li>
+</ul>
+
+<h3 id="related_concepts">Related concepts</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/quantum+group">quantum group</a></li>
+</ul>
+<div>
+<p>
+  <a href="/nlab/edit/group+theory+-+contents">Edit this sidebar</a>
+</p>
+</div></div></div>
+</div>
+</div>
+
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#symmetry_group'>Symmetry group</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -325,6 +535,18 @@ margin-left: 0em;
 <p>…one of the <a class="existingWikiWord" href="/nlab/show/regular+polytopes">regular polytopes</a> in <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> 4…</p>
 
 <p>…hence a higher dimensional analog of the <a class="existingWikiWord" href="/nlab/show/Platonic+solids">Platonic solids</a>…</p>
+
+<h2 id="definition">Definition</h2>
+
+<p>The 24-cell is the <a class="existingWikiWord" href="/nlab/show/regular+polyhedron">regular polyhedron</a> in the <a class="existingWikiWord" href="/nlab/show/Cartesian+space">Cartesian space</a>/<a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^4</annotation></semantics></math> whose <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a> are, under the identification <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>4</mn></msup><msub><mo>≃</mo> <mi>ℝ</mi></msub><mi>ℚ</mi></mrow><annotation encoding="application/x-tex">\mathbb{R}^4 \simeq_{\mathbb{R}} \mathbb{Q}</annotation></semantics></math> with the space of <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a>, the 8 unit <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\pm 1</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>i</mi></mrow><annotation encoding="application/x-tex">\pm i</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>j</mi></mrow><annotation encoding="application/x-tex">\pm j</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">\pm k</annotation></semantics></math> and the 16 unit quaternions given by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mfrac><mn>1</mn><mn>2</mn></mfrac><mo stretchy="false">(</mo><msub><mi>ε</mi> <mn>0</mn></msub><mn>1</mn><mo>+</mo><msub><mi>ε</mi> <mn>1</mn></msub><mi>i</mi><mo>+</mo><msub><mi>ε</mi> <mn>2</mn></msub><mi>j</mi><mo>+</mo><msub><mi>ε</mi> <mn>3</mn></msub><mi>k</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\frac1{2}(\varepsilon_0 1 + \varepsilon_1 i + \varepsilon_2 j + \varepsilon_3 k)</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>ε</mi> <mn>0</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>ε</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>∈</mo><mo stretchy="false">{</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mn>1</mn><msup><mo stretchy="false">}</mo> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">(\varepsilon_0, \ldots, \varepsilon_3) \in \{-1, 1\}^4</annotation></semantics></math>.</p>
+
+<p>(These 24 quaternions form a <a class="existingWikiWord" href="/nlab/show/group">group</a> under quaternion multiplication, and this group is <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/binary+tetrahedral+group">binary tetrahedral group</a>.)</p>
+
+<h2 id="properties">Properties</h2>
+
+<h3 id="symmetry_group">Symmetry group</h3>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/finite+rotation+group">finite rotation group</a> inside <a class="existingWikiWord" href="/nlab/show/orthogonal+group">O(4)</a> which is the <a class="existingWikiWord" href="/nlab/show/symmetry+group">symmetry group</a> of the 24-cell is the <a class="existingWikiWord" href="/nlab/show/Coxeter+group">Coxeter group</a> <a href="https://ncatlab.org/nlab/revision/Coxeter+group/7#the_group_">F4</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -351,14 +573,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on December  7, 2018 at 03:32:06.
+  Last revised on December  7, 2018 at 04:44:02.
   See the <a href="https://ncatlab.org/nlab/history/24-cell" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/24-cell" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/24-cell" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/24-cell/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/24-cell" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/24-cell" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/24-cell/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
