--- a/pages/2810.html
+++ b/pages/2810.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="higher_algebra">Higher algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p><h2 id="algebraic_theories">Algebraic theories</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+
+<h2 id="algebraic_theories">Algebraic theories</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+theory">algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/2-algebraic+theory">2-algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory">(∞,1)-algebraic theory</a></p>
 </li>
@@ -329,7 +337,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/operad">operad</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-operad">(∞,1)-operad</a></p>
 </li>
-</ul><h2 id="algebras_and_modules">Algebras and modules</h2><ul>
+</ul>
+
+<h2 id="algebras_and_modules">Algebras and modules</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra over a monad</a></p>
 
@@ -363,7 +375,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/associated+bundle">associated bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a></p>
 </li>
-</ul><h2 id="higher_algebras">Higher algebras</h2><ul>
+</ul>
+
+<h2 id="higher_algebras">Higher algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
 
@@ -433,7 +449,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation theory</a></li>
 </ul>
 </li>
-</ul><h2 id="model_category_presentations">Model category presentations</h2><ul>
+</ul>
+
+<h2 id="model_category_presentations">Model category presentations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+T-algebras">model structure on simplicial T-algebras</a> / <a class="existingWikiWord" href="/nlab/show/homotopy+T-algebra">homotopy T-algebra</a></p>
 </li>
@@ -443,7 +463,11 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+algebras+over+an+operad">model structure on algebras over an operad</a></p>
 </li>
-</ul><h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2><ul>
+</ul>
+
+<h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -451,7 +475,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Deligne+conjecture">Deligne conjecture</a></p>
 </li>
@@ -463,9 +491,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/higher+algebra+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -712,6 +741,12 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Review includes</p>
+
+<ul>
+<li id="Fresse18"><a class="existingWikiWord" href="/nlab/show/Benoit+Fresse">Benoit Fresse</a>, <em>Little discs operads, graph complexes and Grothendieck–Teichmüller groups</em>, in <a class="existingWikiWord" href="/nlab/show/Haynes+Miller">Haynes Miller</a> (ed.) <em><a class="existingWikiWord" href="/nlab/show/Handbook+of+Homotopy+Theory">Handbook of Homotopy Theory</a></em> (<a href="https://arxiv.org/abs/1811.12536">arXiv:1811.12536</a>)</li>
+</ul>
+
 <p>A standard textbook reference is chapter 4 of</p>
 
 <ul>
@@ -767,7 +802,7 @@ margin-left: 0em;
 <p>For the relation to Poisson Operads see</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Kevin+Costello">Kevin Costello</a>, <a class="existingWikiWord" href="/nlab/show/Owen+Gwilliam">Owen Gwilliam</a>, <em>Factorization algebras in perturbative quantum field theory : <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>P</mi> <mn>0</mn></msub></mrow><annotation encoding="application/x-tex">P_0</annotation></semantics></math>-operad</em> (wikilass=‘newWikiWord’&gt;P_0%20operad<a href="/nlab/new/P_0%2520operad">?</a>&lt;/span&gt;))</li>
+<li><a class="existingWikiWord" href="/nlab/show/Kevin+Costello">Kevin Costello</a>, <a class="existingWikiWord" href="/nlab/show/Owen+Gwilliam">Owen Gwilliam</a>, <em>Factorization algebras in perturbative quantum field theory : <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>P</mi> <mn>0</mn></msub></mrow><annotation encoding="application/x-tex">P_0</annotation></semantics></math>-operad</em></li>
 </ul>
 </body></html>
 
@@ -775,14 +810,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 12:57:41.
+  Last revised on December  7, 2018 at 05:11:53.
   See the <a href="https://ncatlab.org/nlab/history/little cubes operad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/little+cubes+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/little+cubes+operad/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/little+cubes+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/little+cubes+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/little+cubes+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/little+cubes+operad/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/little+cubes+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/little+cubes+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/little cubes operad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
