--- a/pages/9571.html
+++ b/pages/9571.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9355/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -430,6 +430,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Alexander+Grothendieck">Alexander Grothendieck</a>, <em>Sketch of a program</em>, London Math. Soc. Lect. Note Ser., 242, Geometric Galois actions, 1, 5–48, Cambridge Univ. Press, Cambridge, 1997.</li>
 </ul>
 
+<p>Review:</p>
+
+<ul>
+<li id="Fresse18"><a class="existingWikiWord" href="/nlab/show/Benoit+Fresse">Benoit Fresse</a>, <em>Little discs operads, graph complexes and Grothendieck–Teichmüller groups</em>, in <a class="existingWikiWord" href="/nlab/show/Haynes+Miller">Haynes Miller</a> (ed.) <em><a class="existingWikiWord" href="/nlab/show/Handbook+of+Homotopy+Theory">Handbook of Homotopy Theory</a></em> (<a href="https://arxiv.org/abs/1811.12536">arXiv:1811.12536</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -487,14 +493,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 09:59:03.
+  Last revised on December  7, 2018 at 05:08:32.
   See the <a href="https://ncatlab.org/nlab/history/Grothendieck-Teichmüller tower" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Grothendieck-Teichm%C3%BCller+tower" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Grothendieck-Teichm%C3%BCller+tower/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Grothendieck-Teichm%C3%BCller+tower" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Grothendieck-Teichm%C3%BCller+tower" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Grothendieck-Teichm%C3%BCller+tower" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Grothendieck-Teichm%C3%BCller+tower/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Grothendieck-Teichm%C3%BCller+tower" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Grothendieck-Teichm%C3%BCller+tower" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Grothendieck-Teichmüller tower/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
