--- a/pages/16774.html
+++ b/pages/16774.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -597,9 +597,9 @@ margin-left: 0em;
 
 <p>Regard the <a class="existingWikiWord" href="/nlab/show/icosahedron">icosahedron</a>, determined uniquely up to <a class="existingWikiWord" href="/nlab/show/isometry">isometry</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^3</annotation></semantics></math> as a regular convex <a class="existingWikiWord" href="/nlab/show/polyhedron">polyhedron</a> with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>20</mn></mrow><annotation encoding="application/x-tex">20</annotation></semantics></math> faces, as a <a class="existingWikiWord" href="/nlab/show/metric+space">metric</a> subspace <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^3</annotation></semantics></math>. Then the <em>icosahedral group</em> may be defined as the group of <a class="existingWikiWord" href="/nlab/show/isometries">isometries</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math>.</p>
 
-<p>The binary tetrahedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2I</annotation></semantics></math> is, up to <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>, the multiplicative subgroup of the <a class="existingWikiWord" href="/nlab/show/monoid">monoid</a> of <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a> consisting of the 8 unit <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\pm 1</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>i</mi></mrow><annotation encoding="application/x-tex">\pm i</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>j</mi></mrow><annotation encoding="application/x-tex">\pm j</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>±</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">\pm k</annotation></semantics></math> and the 16 unit quaternions given by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mfrac><mn>1</mn><mn>2</mn></mfrac><mo stretchy="false">(</mo><msub><mi>ε</mi> <mn>0</mn></msub><mn>1</mn><mo>+</mo><msub><mi>ε</mi> <mn>1</mn></msub><mi>i</mi><mo>+</mo><msub><mi>ε</mi> <mn>2</mn></msub><mi>j</mi><mo>+</mo><msub><mi>ε</mi> <mn>3</mn></msub><mi>k</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\frac1{2}(\varepsilon_0 1 + \varepsilon_1 i + \varepsilon_2 j + \varepsilon_3 k)</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>ε</mi> <mn>0</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>ε</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>∈</mo><mo stretchy="false">{</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mn>1</mn><msup><mo stretchy="false">}</mo> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">(\varepsilon_0, \ldots, \varepsilon_3) \in \{-1, 1\}^4</annotation></semantics></math>.</p>
+<p>(…)</p>
 
-<p>(These are also the <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a> that span the <a class="existingWikiWord" href="/nlab/show/24-cell">24-cell</a> as a convex <a class="existingWikiWord" href="/nlab/show/regular+polytope">regular polytope</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^4</annotation></semantics></math>).</p>
+<p>The elements of the <em>binary icosahedral group</em> form the <a class="existingWikiWord" href="/nlab/show/vertices">vertices</a> of the <a class="existingWikiWord" href="/nlab/show/120-cell">120-cell</a>.</p>
 
 <p>More to be added.</p>
 
@@ -747,14 +747,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  7, 2018 at 04:42:12.
+  Last revised on December  7, 2018 at 08:05:25.
   See the <a href="https://ncatlab.org/nlab/history/icosahedral group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/icosahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/icosahedral+group/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/icosahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/icosahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/icosahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/icosahedral+group/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/icosahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/icosahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/icosahedral group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
